--- a/php01/styles.css
+++ b/php01/styles.css
@@ -1,3 +1,22 @@
 .sign {
   text-decoration: underline;
 }
+.act {
+  width: 20px;
+  display: inline-block;
+  text-align: center;
+}
+.resolt {
+  width: auto;
+  display: inline-block;
+  padding-left: 5px;
+}
+.span {
+  display: inline-block;
+}
+.bottoms {
+  padding: 20px 0;
+}
+.bottom {
+  margin-right: 5px;
+}
