--- a/php01/styles.css
+++ b/php01/styles.css
@@ -5,11 +5,13 @@
   width: 20px;
   display: inline-block;
   text-align: center;
+  margin: 0;
 }
 .resolt {
   width: auto;
   display: inline-block;
   padding-left: 5px;
+  margin: 0;
 }
 .span {
   display: inline-block;
