--- a/php01/styles.css
+++ b/php01/styles.css
@@ -22,3 +22,33 @@
 .bottom {
   margin-right: 5px;
 }
+.auth {
+  width: 200px;
+  padding: 20px;
+  margin: 100px auto;
+  border: 1px solid #9e9e9e;
+  border-radius: 10px;
+}
+.nolink,
+.link {
+  display: inline-block;
+  width: 148px;
+  text-align: center;
+  font-size: 20px;
+}
+.nolink {
+  background: orange;
+}
+.link:hover {
+  background: orange;
+}
+a {
+  text-decoration: none;
+}
+.header {
+  width: 300px;
+  margin: 100px auto;
+  padding: 20px;
+  border: 1px solid #9e9e9e;
+  border-radius: 10px
+}
