--- a/php02/siteofnews/styles/current.css
+++ b/php02/siteofnews/styles/current.css
@@ -1,71 +1,95 @@
 .sign {
-  text-decoration: underline;
+    text-decoration: underline;
 }
+
 .act {
-  width: 20px;
-  display: inline-block;
-  text-align: center;
-  margin: 0;
+    width: 20px;
+    display: inline-block;
+    text-align: center;
+    margin: 0;
 }
+
 .resolt {
-  width: auto;
-  display: inline-block;
-  padding-left: 5px;
-  margin: 0;
+    width: auto;
+    display: inline-block;
+    padding-left: 5px;
+    margin: 0;
 }
+
 .span {
-  display: inline-block;
+    display: inline-block;
 }
+
 .bottoms {
-  padding: 20px 0;
+    padding: 20px 0;
 }
+
 .bottom {
-  margin-right: 5px;
+    margin-right: 5px;
 }
+
 .auth {
-  width: 200px;
-  padding: 20px;
-  margin: 100px auto 10px auto;
-  border: 1px solid #9e9e9e;
-  border-radius: 10px;
+    width: 200px;
+    padding: 20px;
+    margin: 100px auto 10px auto;
+    border: 1px solid #9e9e9e;
+    border-radius: 10px;
 }
+
 .nolink,
 .link {
-  display: inline-block;
-  width: 148px;
-  text-align: center;
-  font-size: 20px;
+    display: inline-block;
+    width: 148px;
+    text-align: center;
+    font-size: 20px;
 }
+
 .nolink {
-  background: orange;
+    background: orange;
 }
+
 .link:hover {
-  background: orange;
+    background: orange;
 }
+
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
+
 .header {
-  width: 300px;
-  margin: 100px auto;
-  padding: 20px;
-  border: 1px solid #9e9e9e;
-  border-radius: 10px;
+    width: 300px;
+    margin: 100px auto;
+    padding: 20px;
+    border: 1px solid #9e9e9e;
+    border-radius: 10px;
 }
+
 .pimg {
-  width: 200px;
-  margin: 5px;
+    width: 200px;
+    margin: 5px;
 }
+
 img.photo {
-  width: 500px;
+    width: 500px;
 }
-.upload {
-  width: 600px;
-  padding: 0 20px 20px 20px;
-  margin: 10px auto 10px auto;
-  border: 1px solid #9e9e9e;
-  border-radius: 10px;
+
+.upload,
+.error,
+.success {
+    width: 600px;
+    padding: 0 20px 20px 20px;
+    margin: 10px auto 10px auto;
+    border: 1px solid #9e9e9e;
+    border-radius: 10px;
 }
+
 .prev {
-  width: 300px;
+    width: 300px;
+}
+
+.error {
+    background: lightcoral;
+}
+.success {
+    background: darkseagreen;
 }
